--- a/public/index.html
+++ b/public/index.html
@@ -475,14 +475,14 @@
     <script>
         // Configuración de Firebase
         const firebaseConfig = {
-            apiKey: "AIzaSyC8-NSkiDZiAL9kP7XDiWMpyNCGxUQmMns",
-            authDomain: "campana-donacion-sangre.firebaseapp.com",
-            projectId: "campana-donacion-sangre",
-            storageBucket: "campana-donacion-sangre.firebasestorage.app",
-            messagingSenderId: "928254623462",
-            appId: "1:928254623462:web:fb2a396825f82c1cd3c527",
-            measurementId: "G-3GQ9M3JMJ4"
-        };
+            apiKey: "AIzaSyBFmiw6cQZH_xwJKdsX0byakKfVbDyyIJk",
+            authDomain: "campana-donacion-sangre-3dfbd.firebaseapp.com",
+            projectId: "campana-donacion-sangre-3dfbd",
+            storageBucket: "campana-donacion-sangre-3dfbd.firebasestorage.app",
+            messagingSenderId: "777070168766",
+            appId: "1:777070168766:web:40264249a5ac8c3271acef",
+            measurementId: "G-J7SB04SNKD"
+            };
 
         // Inicializar Firebase
         firebase.initializeApp(firebaseConfig);
